[project]
name = "mujoco-tutorial"
version = "0.1.0"
description = "Minimal MuJoCo setup for WSLg GUI and headless rollout tests"
readme = "README.md"
requires-python = ">=3.10,<3.13"
dependencies = [
    "mujoco>=3.2.0",
    "numpy>=1.26.0",
    "typer>=0.12.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.6.0",
]

[tool.uv]
package = false

[tool.ruff]
line-length = 100
target-version = "py310"
