[project]
name = "mujoco-tutorial"
version = "0.1.0"
description = "Minimal MuJoCo setup for WSLg GUI and headless rollout tests"
readme = "README.md"
requires-python = ">=3.10,<3.13"
dependencies = [
    "gymnasium[mujoco]>=1.2.0",
    "mlflow>=3.0.0",
    "mujoco>=3.2.0",
    "numpy>=1.26.0",
    "pandas>=2.3.3",
    "pyarrow>=23.0.1",
    "stable-baselines3>=2.7.0",
    "torch>=2.3.0",
    "typer>=0.12.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.6.0",
]

[tool.uv]
package = false

[tool.uv.sources]
torch = [
    { index = "pytorch-cpu", marker = "platform_system == 'Linux'" },
]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[tool.ruff]
line-length = 100
target-version = "py310"
